Move interim report and add launcher trade study

--- a/Report/spacecraft.bib
+++ b/Report/spacecraft.bib
@@ -5,7 +5,6 @@
   year={2011},
   publisher={Microcosm Press}
 },
-
 @book{sse,
   title={Spacecraft Systems Engineering},
   author={Fortescue, Peter W. and Swinerd, Graham and Stark, John},
@@ -13,10 +12,65 @@
   year={2011},
   publisher={John Wiley \& Sons}
 },
-
 @book{commlinks,
   title={ELEC 4509: Communication Links},
   author={Jim Wight},
   year={1997},
   publisher={Brightspace}
+},
+@book{ariane,
+  title={Ariane 6 User's Manual},
+  author={Arianespace},
+  editor={Roland Lagier},
+  year={2021}
+},
+@conference{next,
+  author       = "Daniel A. Herman",
+  title        = "NASA's Evolutionary Xenon Thruster (NEXT) Project Qualification Propellant Throughput Milestone: Performance, Erosion, and Thruster Service Life Prediction after 450~kg",
+  year         = "2010",
+  month        = "May",
+  address      = "Colorado Springs, CO",
+  organization = "JANNAF",
+  publisher    = "US Government",
+  note         = "E-17447",
+},
+@online{arianeprice,
+  title={Ariane 62 | CSO-3},
+  author={NextSpaceflight},
+  year={2025},
+  url={https://nextspaceflight.com/launches/details/917},
+  urldate={2025-03-28}
+},
+@book{spacex,
+  title={Falcon User's Guide},
+  author={SpaceX},
+  year={2021}
+},
+@book{spacexprice,
+  title={Capabilities \& Services},
+  author={SpaceX},
+  year={2024}
+},
+@book{atlasv,
+  title={Atlas V Launch Services User's Guide},
+  year={2010},
+  author={ULA},
+  editor={Mark Wilkins}
+},
+@online{atlasvprice,
+  title={Atlas V},
+  author={NextSpaceflight},
+  url={https://nextspaceflight.com/rockets/25},
+  urldate={2025-03-28}
+},
+@book{longmarch,
+  title={LM-3B User's Manual},
+  year={1999}
+},
+@online{longmarchprice,
+  title={Long March 3B/YZ-1},
+  author={SpaceLaunchNow},
+  year={2019},
+  url={https://spacelaunchnow.me/vehicle/launch_vehicle/78},
+  urldate={2025-03-30}
 }
