--- a/Report/spacecraft.bib
+++ b/Report/spacecraft.bib
@@ -73,4 +73,11 @@
   year={2019},
   url={https://spacelaunchnow.me/vehicle/launch_vehicle/78},
   urldate={2025-03-30}
+},
+@book{aero3240,
+  title={AERO 3240 Orbital Mechanics},
+  author={Steve Ulrich},
+  editor={Adriana Steckel},
+  year={2023},
+  publisher={Brightspace}
 }
