--- a/Report/spacecraft.bib
+++ b/Report/spacecraft.bib
@@ -36,7 +36,7 @@
 },
 @online{arianeprice,
   title={Ariane 62 | CSO-3},
-  author={NextSpaceflight},
+  author={Next~Spaceflight},
   year={2025},
   url={https://nextspaceflight.com/launches/details/917},
   urldate={2025-03-28}
@@ -59,7 +59,7 @@
 },
 @online{atlasvprice,
   title={Atlas V},
-  author={NextSpaceflight},
+  author={Next~Spaceflight},
   url={https://nextspaceflight.com/rockets/25},
   urldate={2025-03-28}
 },
@@ -69,7 +69,7 @@
 },
 @online{longmarchprice,
   title={Long March 3B/YZ-1},
-  author={SpaceLaunchNow},
+  author={Space~Launch~Now},
   year={2019},
   url={https://spacelaunchnow.me/vehicle/launch_vehicle/78},
   urldate={2025-03-30}
@@ -80,4 +80,11 @@
   editor={Adriana Steckel},
   year={2023},
   publisher={Brightspace}
+},
+@online{pipelines,
+  title={CER - Interactive Pipeline Map},
+  author={Canada~Energy~Regulator},
+  year={2023},
+  url={https://www.cer-rec.gc.ca/en/safety-environment/industry-performance/interactive-pipeline/index.html},
+  urldate={2025-02-10}
 }
